Адаптив + доделал инфу

--- a/index.html
+++ b/index.html
@@ -32,17 +32,22 @@
                                         <div class="about__grid-item">
                                                 <h4 class="about__h4">26</h4>
                                                 <h5 class="about__h5">Лет</h5>
-                                                <h6 class="about__p">на рынке</h6>
+                                                <h6 class="about__h6">на рынке</h6>
                                         </div>
                                         <div class="about__grid-item">
                                                 <h4 class="about__h4">26</h4>
                                                 <h5 class="about__h5">Лет</h5>
-                                                <h6 class="about__p">на рынке</h6>
+                                                <h6 class="about__h6">на рынке</h6>
                                         </div>
                                         <div class="about__grid-item">
                                                 <h4 class="about__h4">26</h4>
                                                 <h5 class="about__h5">Лет</h5>
-                                                <h6 class="about__p">на рынке</h6>
+                                                <h6 class="about__h6">на рынке</h6>
+                                        </div>
+                                        <div class="about__grid-item">
+                                                <h4 class="about__h4">26</h4>
+                                                <h5 class="about__h5">Лет</h5>
+                                                <h6 class="about__h6">на рынке</h6>
                                         </div>
                                 </div>
                         </div>
