Докончил 4 блок + сделал адаптив

--- a/index.html
+++ b/index.html
@@ -51,8 +51,78 @@
                                         </div>
                                 </div>
                         </div>
-                        <div class="container">
+                </div>
+                <div class="container">
+                        <h2 class="text-h2 project-h2">НАШИ САМЫЕ БОЛЬШИЕ ПРОЕКТЫ</h2>
+                        <div class="about__flex">
+                                <div class="about__flex-item">
+                                        <img src="img/area.jpg" alt="Арена" class="project-img">
+                                        <div class="rectangle"></div>
+                                        <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                                        <div class="text-p project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному еву.</div>
+                                </div>
+                                <div class="about__flex-item">
+                                        <img src="img/area.jpg" alt="Арена" class="project-img">
+                                        <div class="rectangle"></div>
+                                        <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                                        <div class="text-p project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному еву.</div>
+                                </div>
+                                <div class="about__flex-item">
+                                        <img src="img/area.jpg" alt="Арена" class="project-img">
+                                        <div class="rectangle"></div>
+                                        <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                                        <div class="text-p project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному еву.</div>
+                                </div>
+                        </div>
+                </div>
+        </section>
 
+        <section class="request">
+                <div class="container">
+                        <div class="request-container">
+                                <div class="request__flex">
+                                        <div class="request__flex-item">
+                                                <h2 class="title-h2">САМЫЕ УМНЫЕ ПРОЕКТЫ</h2>
+                                                <h3 class="subtitle-h3">РЕАЛИЗУЕМ САМЫЕ СМЕЛЫЕ РЕШЕНИЯ В РОССИИ!</h3>
+                                        </div>
+                                        <div class="request__flex-item request__flex-mail">
+                                                <button class="request-button"> <img src="img/mail.svg" alt="почта" class="request-img"><span class="request-text">ВАШ ЗАПРОС</span></button>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </section>
+
+        <section class="services">
+                <div class="container">
+                        <h2 class="text-h2 section__h2">
+                                ЧЕМ МЫ ЗАНИМАЕМСЯ?
+                        </h2>
+                        <div class="services__grid">
+                                <div class="services__grid-item">
+                                        <img class="services__icon" src="img/build.svg" alt="Services icon">
+                                        <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</h4>
+                                </div>
+                                <div class="services__grid-item">
+                                        <img class="services__icon" src="img/build.svg" alt="Services icon">
+                                        <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</h4>
+                                </div>
+                                <div class="services__grid-item">
+                                        <img class="services__icon" src="img/build.svg" alt="Services icon">
+                                        <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</h4>
+                                </div>
+                                <div class="services__grid-item">
+                                        <img class="services__icon" src="img/build.svg" alt="Services icon">
+                                        <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</h4>
+                                </div>
+                                <div class="services__grid-item">
+                                        <img class="services__icon" src="img/build.svg" alt="Services icon">
+                                        <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</h4>
+                                </div>
+                                <div class="services__grid-item">
+                                        <img class="services__icon" src="img/build.svg" alt="Services icon">
+                                        <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</h4>
+                                </div>
                         </div>
                 </div>
         </section>
