Доверстал предпоследний блок + адаптив

--- a/index.html
+++ b/index.html
@@ -126,5 +126,136 @@
                         </div>
                 </div>
         </section>
+
+        <section class="portfolio">
+                <div class="portfolio__grid">
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                        <div class="portfolio__grid-item">
+                                <img src="img/portfolio_img.png" alt="Portfolio img" class="portfolio__img">
+                        </div>
+                </div>
+        </section>
+
+        <section class="questions">
+                <div class="container">
+                        <div class="questions__items">
+                                <h2 class="text-h2 section__h2">
+                                        Ответы на вопросы
+                                </h2>
+                                <div class="questions__item">
+                                        <h3 class="text-h3 question-h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                        <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                                </div>
+                        </div>
+                        <div class="questions__items">
+                                <div class="questions__item">
+                                        <h3 class="text-h3 question-h3 open">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                        <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                                </div>
+                        </div>
+                        <div class="questions__items">
+                                <div class="questions__item">
+                                        <h3 class="text-h3 question-h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                        <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                                </div>
+                        </div>
+                        <div class="questions__items">
+                                <div class="questions__item">
+                                        <h3 class="text-h3 question-h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                        <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                                </div>
+                        </div>
+                </div>
+        </section>
+
+        <section class="partners">
+                <div class="container">
+                        <h2 class="text-h2 partners-h2">Наши партнеры</h2>
+                        <div class="partners__flex">
+                                <div class="partners__item">
+                                        <img src="img/partner-img.png" alt="">
+                                </div>
+                                <div class="partners__item">
+                                        <img src="img/partner-img.png" alt="">
+                                </div>
+                                <div class="partners__item">
+                                        <img src="img/partner-img.png" alt="">
+                                </div>
+                                <div class="partners__item">
+                                        <img src="img/partner-img.png" alt="">
+                                </div>
+                                <div class="partners__item">
+                                        <img src="img/partner-img.png" alt="">
+                                </div>
+                        </div>
+                </div>
+        </section>
+d
+        <section class="reviews">
+                <div class="container">
+                        <h2 class="text-h2 reviews-h2">Отзывы о работе с нами</h2>
+                                <div class="reviews__grid">
+                                        <div class="reviews__item">
+                                                <div class="reviews__card">
+                                                        <img src="img/symbol_icon.png" alt="">
+                                                        <p class="text-p p-reviews">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов</p>
+                                                </div>
+                                                <h4 class="text-h4 reviews-h4">Иванов Иван,<span class="reviews__text-accent"> ООО “Газпром-Арена”</span></h4>
+                                        </div>
+                                        <div class="reviews__item">
+                                                <div class="reviews__card">
+                                                        <img src="img/symbol_icon.png" alt="">
+                                                        <p class="text-p p-reviews">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов</p>
+                                                </div>
+                                                <h4 class="text-h4 reviews-h4">Иванов Иван,<span class="reviews__text-accent"> ООО “Газпром-Арена”</span></h4>
+                                        </div>
+                                        <div class="reviews__item">
+                                                <div class="reviews__card">
+                                                        <img src="img/symbol_icon.png" alt="">
+                                                        <p class="text-p p-reviews">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов</p>
+                                                </div>
+                                                <h4 class="text-h4 reviews-h4">Иванов Иван,<span class="reviews__text-accent"> ООО “Газпром-Арена”</span></h4>
+                                        </div>
+
+                                </div>
+                </div>
+        </section>
+
+        <section class="request">
+                <div class="container">
+                        <div class="request-container">
+                                <div class="request__flex">
+                                        <div class="request__flex-item">
+                                                <h2 class="title-h2">ХОТИТЕ С НАМИ РАБОТАТЬ?</h2>
+                                                <h3 class="subtitle-h3">ОСТАВЬТЕ ЗАЯВКУ И МЫ СВЯЖЕМСЯ С ВАМИ!</h3>
+                                        </div>
+                                        <div class="request__flex-item request__flex-mail">
+                                                <button class="request-button"> <img src="img/mail.svg" alt="почта" class="request-img"><span class="request-text">ВАШ ЗАПРОС</span></button>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </section>
+
 </body>
 </html>
