--- a/index.html
+++ b/index.html
@@ -257,5 +257,11 @@ d
                 </div>
         </section>
 
+        <section class="contacts">
+                <div class="container">
+                        <h2 class="title-h2">КОНТАКТЫ</h2>
+                </div>
+        </section>
+
 </body>
 </html>
