--- a/index.html
+++ b/index.html
@@ -259,9 +259,43 @@ d
 
         <section class="contacts">
                 <div class="container">
-                        <h2 class="title-h2">КОНТАКТЫ</h2>
+                        <h2 class="title-h2 contacts-h2">КОНТАКТЫ</h2>
+                        <div class="contacts__grid">
+                                <div class="contacts__grid-item">
+                                        <img class="contacts-img" src="img/location.svg" alt="">
+                                        <h3 class="text-h3 contacts-h3">Адрес</h3>
+                                        <h3 class="text-h3">НЕВСКИЙ ПРОСПЕКТ 140,
+                                                ОФИС 140-142</h3>
+                                </div>
+                                <div class="contacts__grid-item">
+                                        <img class="contacts-img" src="img/phome.svg" alt="">
+                                        <h3 class="text-h3 contacts-h3">Телефон</h3>
+                                        <h3 class="text-h3">8 (812) 111-22-33 <br> 8 (812) 111-22-33</h3>
+                                </div>
+                                <div class="contacts__grid-item">
+                                        <img class="contacts-img" src="img/clock.svg" alt="">
+                                        <h3 class="text-h3 contacts-h3">ВРЕМЯ РАБОТЫ:</h3>
+                                        <h3 class="text-h3">ПН-СБ <br>
+                                                10:00 - 20:00</h3>
+                                </div>
+                                <div class="contacts__grid-item">
+                                        <img class="contacts-img" src="img/mailtrue.svg" alt="">
+                                        <h3 class="text-h3 contacts-h3">E-MAIL:</h3>
+                                        <h3 class="text-h3"><span class="contacts-email">INFO@VIP.RU</span></h3>
+                                </div>
+                        </div>
                 </div>
         </section>
+
+        <footer class="footer">
+                <div class="container">
+                                <div class="footer__flex">
+                                        <p class="text-p text-footer">© 2019 Строительная компания</p>
+                                        <p class="text-p text-footer">Разработано лучшей студией</p>
+                                </div>
+                        </div>
+                </div>
+        </div>
 
 </body>
 </html>
