Подключил materialize + сделал интерактив

--- a/index.html
+++ b/index.html
@@ -158,32 +158,32 @@
 
         <section class="questions">
                 <div class="container">
-                        <div class="questions__items">
-                                <h2 class="text-h2 section__h2">
+                        <h2 class="text-h2 section__h2">
                                         Ответы на вопросы
                                 </h2>
-                                <div class="questions__item">
-                                        <h3 class="text-h3 question-h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                        <div class="questions__items">
+                                <details class="questions__item">
+                                        <summary class="text-h3 question-h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                                         <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
-                                </div>
+                                </details>
                         </div>
                         <div class="questions__items">
-                                <div class="questions__item">
-                                        <h3 class="text-h3 question-h3 open">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                <details class="questions__item">
+                                        <summary class="text-h3 question-h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                                         <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
-                                </div>
+                                </details>
                         </div>
                         <div class="questions__items">
-                                <div class="questions__item">
-                                        <h3 class="text-h3 question-h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                <details class="questions__item">
+                                        <summary class="text-h3 question-h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                                         <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
-                                </div>
+                                </details>
                         </div>
                         <div class="questions__items">
-                                <div class="questions__item">
-                                        <h3 class="text-h3 question-h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                                <details class="questions__item">
+                                        <summary class="text-h3 question-h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                                         <p class="text-p question-p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
-                                </div>
+                                </details>
                         </div>
                 </div>
         </section>
@@ -270,7 +270,9 @@ d
                                 <div class="contacts__grid-item">
                                         <img class="contacts-img" src="img/phome.svg" alt="">
                                         <h3 class="text-h3 contacts-h3">Телефон</h3>
-                                        <h3 class="text-h3">8 (812) 111-22-33 <br> 8 (812) 111-22-33</h3>
+                                        <h3 class="text-h3 contacts-h3">
+                                                <a href="tel:+78121112233">8 (812) 111-22-33 <br> 8 (812) 111-22-33</a>
+                                        </h3>
                                 </div>
                                 <div class="contacts__grid-item">
                                         <img class="contacts-img" src="img/clock.svg" alt="">
@@ -281,7 +283,7 @@ d
                                 <div class="contacts__grid-item">
                                         <img class="contacts-img" src="img/mailtrue.svg" alt="">
                                         <h3 class="text-h3 contacts-h3">E-MAIL:</h3>
-                                        <h3 class="text-h3"><span class="contacts-email">INFO@VIP.RU</span></h3>
+                                        <h3 class="text-h3 contacts-h3"><a href="mailto:kskill228@gmail.com">INFO@VIP.RU</a></h3>
                                 </div>
                         </div>
                 </div>
